syntax = "proto3";
package lumera.supernode.v1;

option go_package = "x/supernode/v1/types";

import "gogoproto/gogo.proto";

enum SuperNodeState {
  option (gogoproto.goproto_enum_prefix) = false;
  option (gogoproto.goproto_enum_stringer) = true;

  SUPERNODE_STATE_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "SuperNodeStateUnspecified"];
  SUPERNODE_STATE_ACTIVE = 1 [(gogoproto.enumvalue_customname) = "SuperNodeStateActive"];
  SUPERNODE_STATE_DISABLED = 2 [(gogoproto.enumvalue_customname) = "SuperNodeStateDisabled"];
  SUPERNODE_STATE_STOPPED = 3 [(gogoproto.enumvalue_customname) = "SuperNodeStateStopped"];
  SUPERNODE_STATE_PENALIZED = 4 [(gogoproto.enumvalue_customname) = "SuperNodeStatePenalized"];
  SUPERNODE_STATE_POSTPONED = 5 [(gogoproto.enumvalue_customname) = "SuperNodeStatePostponed"];
}

message SuperNodeStateRecord { 
  SuperNodeState state = 1 [(gogoproto.moretags) = "yaml:\"state\""];
  int64 height = 2; 
  // reason is an optional string describing why the state transition occurred.
  // It is currently set only for transitions into POSTPONED.
  string reason = 3 [(gogoproto.moretags) = "yaml:\"reason\""];
}
